<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_to_pointcloud2</name>
  <version>0.0.1</version>
  <description>This package converts Livox custom messages to ROS 2 PointCloud2 data types, facilitating the integration of Livox lidar sensors into ROS 2 ecosystems.</description>
  <maintainer email="porizou.electro@gmail.com">porizou</maintainer>
  <license>Apache 2.0</license>  <!-- Example license, replace with your actual choice -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>livox_ros_driver2</depend>  <!-- Assuming this is a real dependency -->


</package>
